--- a/training.automation.selenium.specflow/packages.config
+++ b/training.automation.selenium.specflow/packages.config
@@ -5,6 +5,7 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NHamcrest" version="2.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.11.0" targetFramework="net461" />
+  <package id="RestSharp" version="106.5.2" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.44.0" targetFramework="net461" />
   <package id="SpecFlow" version="2.4.0" targetFramework="net461" />
