--- a/training.automation.selenium.specflow/training.automation.specflow.csproj
+++ b/training.automation.selenium.specflow/training.automation.specflow.csproj
@@ -56,6 +56,9 @@
     <Reference Include="nunit.framework, Version=3.11.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.11.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="RestSharp, Version=106.5.2.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharp.106.5.2\lib\net452\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="SpecRun.SpecFlowPlugin, Version=1.8.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\SpecRun.SpecFlow.2-4-0.1.8.5\lib\net45\SpecRun.SpecFlowPlugin.dll</HintPath>
     </Reference>
@@ -65,6 +68,7 @@
     <Reference Include="System.ValueTuple, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.3.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="TechTalk.SpecFlow, Version=2.4.0.0, Culture=neutral, PublicKeyToken=0778194805d6db41, processorArchitecture=MSIL">
       <HintPath>..\packages\SpecFlow.2.4.0\lib\net45\TechTalk.SpecFlow.dll</HintPath>
     </Reference>
@@ -95,6 +99,16 @@
     <Compile Include="Test\CSharp\StepDefinitions\LogInPageSteps.cs" />
     <Compile Include="Test\CSharp\StepDefinitions\SpecificBoardsPageSteps.cs" />
     <Compile Include="Test\CSharp\StepDefinitions\SplashPageSteps.cs" />
+    <Compile Include="Test\Features\API\Placeholder.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Placeholder.feature</DependentUpon>
+    </Compile>
+    <Compile Include="Test\Features\UI\BoardsPage.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BoardsPage.feature</DependentUpon>
+    </Compile>
     <Compile Include="Test\Features\UI\LogInPage.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -110,6 +124,14 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="Default.srprofile" />
+    <None Include="Test\Features\API\Placeholder.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>Placeholder.feature.cs</LastGenOutput>
+    </None>
+    <None Include="Test\Features\UI\BoardsPage.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>BoardsPage.feature.cs</LastGenOutput>
+    </None>
     <None Include="Test\Features\UI\LogInPage.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>LogInPage.feature.cs</LastGenOutput>
@@ -127,9 +149,7 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Test\Features\API\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\training.automation.api\training.automation.api.csproj">
       <Project>{ABC29DE0-28C7-4730-8EEA-7D572398C6DC}</Project>
